tests/ui/masterror/fail/missing_attr.rs
use masterror::Masterror;

#[derive(Debug, Masterror)]
#[error("no attribute")]
struct Missing;

fn main() {}
